ecmascript/parser/tests/test262-error-references/fail/a4bfa8e3b523c466.module.js.stderr
error: 'import', and 'export' cannot be used outside of module code
 --> $DIR/tests/test262-parser/fail/a4bfa8e3b523c466.module.js:1:2
  |
1 | {export default 3;}
  |  ^^^^^^

